<resources>
    <string name="app_name">ShoppingList</string>
    <string name="nav_open">Ouvrir</string>
    <string name="nav_close">Fermer</string>
    <string name="conso">Votre consommation par catégorie</string>
    <string name="favorite">Vos aliments favoris</string>
    <string name="author">Développé par Matthieu DUFON</string>
    <string name="context">Dans le cadre d\'un projet universitaire à l\'UTT</string>
    <string name="ue">Pour l\'UE IF26 au semestre A22</string>
    <string name="github">Consulter sur Github</string>
    <string name="theme_choice">Choisissez un thème</string>
    <string name="watermelon">Watermelon</string>
    <string name="apple">Apple</string>
    <string name="banana">Banana</string>
</resources>