<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="30dp"
        android:paddingHorizontal="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/fragment_about_tv1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/author" />

        <TextView
            android:id="@+id/fragment_about_tv2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/context" />

        <TextView
            android:id="@+id/fragment_about_tv3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/ue" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginVertical="10dp"
            android:background="@android:color/darker_gray">
        </View>

        <Button
            android:id="@+id/fragment_about_bt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@android:color/transparent"
            android:drawableRight="@drawable/ic_baseline_arrow_outward_24"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:text="@string/github" />


    </LinearLayout>

</FrameLayout>